# course-platform

./: .gitignore  pyproject.toml
course_platform/: settings.py  urls.py  views.py
courses/: admin.py  models.py  services.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_alter_course_access.py  0003_alter_course_image.py  0004_lesson.py  0005_lesson_can_preview_lesson_status.py  0006_lesson_thumbnail_lesson_video.py  0007_alter_lesson_options_lesson_order.py  0008_lesson_updated.py  0009_alter_lesson_options_lesson_timestamp.py  0010_course_public_id.py  0011_lesson_public_id.py  0012_alter_course_public_id.py  0013_alter_lesson_public_id.py
emails/: admin.py  css.py  forms.py  models.py  services.py  views.py
emails/migrations/: 0001_initial.py  0002_emailverificationevent_last_attempt_at.py  0003_email_active.py  0004_emailverificationevent_token.py
helpers/: __init__.py  _cloudinary.py
helpers/_cloudinary/: services.py
templates/: base.html  home.html
templates/admin/: base_site.html
templates/auth/: login-logout.html
templates/base/: js.html  navbar.html
templates/courses/: detail.html  email-required.html  lesson-coming-soon.html  lesson.html  list.html
templates/courses/snippets/: list-display.html
templates/emails/hx/: form.html
templates/videos/snippets/: embed.html
theme/static_src/: package-lock.json  package.json  postcss.config.js  tailwind.config.js
theme/static_src/src/: styles.css
